cka-yaml/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    creationTimestamp: "2023-07-25T16:53:06Z"
    generation: 3
    name: ingress-wear-watch
    namespace: app-space
    resourceVersion: "2581"
    uid: 7d964f9d-0e83-4e90-b2cc-8d776e0736d3
  spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: wear-service
              port:
                number: 8080
          path: /wear
          pathType: Prefix
        - backend:
            service:
              name: video-service
              port:
                number: 8080
          path: /stream
          pathType: Prefix
        - backend:
            service:
              name: food-service
              port:
                number: 8080
          path: /eat
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.111.84.42
kind: List
metadata:
  resourceVersion: ""
