cka-yaml/nodeaffinity.yaml
apiversion: v1
kind: Pod
metadata:
  name: myapp-pod
spec:
   containers:
   - name: data-processor
     image: data-processor
   affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution: 
        nodeSelectorTerms:
        - matchExpressions:
          - key: size
            operator: In
            values:
            - Large
            
apiversion: v1
kind: Pod
metadata:
  name: myapp-pod2
spec:
   containers:
   - name: data-processor2
     image: data-processor2
   affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution: 
        nodeSelectorTerms:
        - matchExpressions:
          - key: size
            operator: NotIn
            values:
            - Small
            

apiversion: v1
kind: Pod
metadata:
  name: myapp-pod3
spec:
   containers:
   - name: data-processor3
     image: data-processor3
   affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution: 
        nodeSelectorTerms:
        - matchExpressions:
          - key: size
            operator: Exists                


apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    id: very-important  
  name: deploy-important 
spec:
  replicas: 3
  selector:
    matchLabels:
        id: very-important
  template:
    metadata:
      labels:
        id: very-important
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: id
                operator: In
                values:
                - very-important
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: nginx:1.17.6-alpine
        name: container1
      - image: kubernetes/pause
        name: container2
status: {}
