cka-yaml/pod_static.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-busybox 
spec:
  containers:
  - name: static-busybox
    image: busybox
    command: ["sleep", "1000"]
